more spacing fixes

--- a/_sass/jekyll-theme-haymarket.scss
+++ b/_sass/jekyll-theme-haymarket.scss
@@ -124,11 +124,6 @@ p {
 }
 
 .btn,
-.btn-container {
-	display: inline-block;
-}
-
-.btn,
 .column-fix {
 	box-shadow: 0 2px 4px rgba(0, 0, 0, .25);
 	transition: box-shadow .4s cubic-bezier(.25, .8, .25, 1);
@@ -148,15 +143,18 @@ p {
 	color: $header-heading-color;
 }
 
+.btn-container,
+.note {
+	margin: .5rem 0 1rem 0;
+}
+
 .btn {
-	margin: .5rem 1rem 1rem 0;
+	display: inline-block;
 	background-color: $dsa-red;
 }
 
 .note {
-	display: inline-block;
 	width: 100%;
-	margin: .5rem 0 1rem 0;
 	padding: 1rem;
 	border: 2px solid $border-color;
 	background-image: linear-gradient(-180deg, $border-color, $white 60%);
@@ -400,7 +398,6 @@ p {
 }
 
 .full-width-image-container {
-	display: inline-block;
 	margin: 0;
 
 	.full-width-image {
@@ -779,11 +776,10 @@ p {
 
 		.btn-container {
 			float: right;
+			margin: 0;
 		}
 
 		.btn {
-			margin-top: 0;
-			margin-right: 0;
 			background-color: $dsa-purple;
 		}
 	}
